fix layout issues mobile

--- a/desktop.css
+++ b/desktop.css
@@ -111,9 +111,14 @@ body {
   display:inline-block;
 }
 
-#facebook > img, #twitter > img , #linkedin > img , #email > img{
+#facebook img, #twitter img , #linkedin img {
   height: 50px;
   width: 50px;
+}
+
+#email img {
+  width: 45px;
+  height: 45px;
 }
 
 a:link, a:visited, a:active {
